[gd_scene load_steps=4 format=3 uid="uid://bc255rk5akoia"]

[ext_resource type="Script" uid="uid://b00mgi5i5nqry" path="res://Scripts/MenuScripts/options.gd" id="1_c2u1v"]

[sub_resource type="LabelSettings" id="LabelSettings_yjkok"]
font_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3hnfs"]
bg_color = Color(0.48858464, 0.6692383, 0.1694774, 1)

[node name="options" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_behavior_recursive = 2
script = ExtResource("1_c2u1v")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.158472, 0.158472, 0.158472, 1)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 338.0
offset_top = 536.0
offset_right = 811.0
offset_bottom = 628.0
theme_override_font_sizes/font_size = 50
text = "Return To Menu"

[node name="Brightness" type="Label" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 192.0
offset_right = 376.0
offset_bottom = 220.0
text = "Brightness"
label_settings = SubResource("LabelSettings_yjkok")

[node name="BrightnessSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 392.0
offset_top = 176.0
offset_right = 600.0
offset_bottom = 244.0
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_3hnfs")
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="GameSpeed" type="Label" parent="."]
layout_mode = 0
offset_left = 248.0
offset_top = 320.0
offset_right = 376.0
offset_bottom = 348.0
text = "Game Speed"
label_settings = SubResource("LabelSettings_yjkok")

[node name="GameSpeedSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 392.0
offset_top = 304.0
offset_right = 600.0
offset_bottom = 372.0
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_3hnfs")
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="resized" from="Brightness" to="." method="_on_brightness_resized"]
[connection signal="value_changed" from="BrightnessSlider" to="." method="_on_brightness_slider_value_changed"]
